syntax = "proto3";

option java_package = "org.sorapointa.proto";

message ProfilePicture {
  uint32 avatar_id = 1;
  uint32 costume_id = 2;
}
